  [ foo | | bar ] stands for [ foo | idtac | bar ]. (doc TODO). 
- "Tactic Notation" extended to allow notations of tacticals (doc TODO).
- Added "autorewrite with ... in hyp [using ...]" (doc TODO).
- Added entry constr_may_eval for tactic extensions (new syntax).
- Fixed a "fold" bug (non critical and possible source of incompatibilities).

Modules

- Added "Locate Module qualid" to get the full path of a module.
- Module/Declare Module syntax made more uniform (doc TODO)
- Added syntactic sugar "Declare Module Export/Import" and
  "Module Export/Import" (doc TODO)
- Added syntactic sugar "Module M(Export/Import X Y: T)" and
  "Module Type M(Export/Import X Y: T)"
  (only for interactive definitions) (doc TODO)
- Construct "with" generalized to module paths:
   T with (Definition|Module) M1.M2....Mn.l := l'.  (doc TODO)

Notations

- "format" option aware of recursive notations

Library

- Few improvements in ZArith potentially exceptionally breaking the
  compatibility (useless hypothesys of Zgt_square_simpl and
  Zlt_square_simpl removed; fixed names mentioning letter O instead of
  digit 0; weaken premises in Z_lt_induction)

Changes from V8.0beta to V8.0
=============================

Vernacular commands

- New option "Set Printing All" to deactivate all high-level forms of
  printing (implicit arguments, coercions, destructing let,
  if-then-else, notations, projections)
- "Functional Scheme" and "Functional Induction" extended to polymorphic
  types and dependent types
- Notation now allows recursive patterns, hence recovering parts of the
  fonctionalities of pre-V8 Grammar/Syntax commands
- Command "Print." discontinued.
- Redundant syntax "Implicit Arguments On/Off" discontinued

New syntax

- Semantics change of the if-then-else construction in new syntax: 
  "if c then t1 else t2" now stands for
  "match c with c1 _ ... _ => t1 | c2 _ ... _ => t2 end"
  with no dependency of t1 and t2 in the arguments of the constructors;